--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "single-spa": "^5.8.3",
+    "single-spa-react": "^3.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
