feat: Migrating Angular Application to Single-spa

--- a/angular-app/tsconfig.app.json
+++ b/angular-app/tsconfig.app.json
@@ -1,13 +1,11 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["node"]
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "src/main.single-spa.ts"
   ],
   "include": [
     "src/**/*.d.ts"
