--- a/angular-app/tsconfig.json
+++ b/angular-app/tsconfig.json
@@ -12,9 +12,9 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2016", "dom"]
+  },
+  "angularCompilerOptions": {
+    "enableIvy": true
   }
 }
